@@ -38,7 +38,6 @@ import org.languagetool.Language;
 import org.languagetool.rules.Category;
 import org.languagetool.rules.RuleMatch;
 import org.languagetool.rules.spelling.SpellingCheckRule;
-import org.languagetool.tools.StringTools;
 
 /**
  * A hunspell-based spellchecking-rule.
@@ -95,7 +94,7 @@ public class HunspellRule extends SpellingCheckRule {
       }
       boolean isAlphabetic = true;
       if (word.length() == 1) { // hunspell dictionaries usually do not contain punctuation
-        isAlphabetic = StringTools.isAlphabetic(word.charAt(0));
+        isAlphabetic = Character.isAlphabetic(word.charAt(0));
       }
       if (isAlphabetic && !word.equals("--") && dictionary.misspelled(word)) {
         final RuleMatch ruleMatch = new RuleMatch(this,
