@@ -505,20 +505,5 @@ public final class StringTools {
     }
     return s.toString();
   }
-  
-  /**
-   * Mimicks Java 1.7 {@link Character#isAlphabetic} (needed as we require only Java 1.6)
-   *  
-   * @param codePoint The input character.
-   * @return True if the character is a Unicode alphabetic character.
-   */
-  public static boolean isAlphabetic(int codePoint) {
-    return (((((1 << Character.UPPERCASE_LETTER) |
-        (1 << Character.LOWERCASE_LETTER) |
-        (1 << Character.TITLECASE_LETTER) |
-        (1 << Character.MODIFIER_LETTER) |
-        (1 << Character.OTHER_LETTER) |
-        (1 << Character.LETTER_NUMBER)) >> Character.getType(codePoint)) & 1) != 0);
-  }
 
 }
