@@ -11,6 +11,8 @@ LanguageTool Change Log
 -API:
     -JLanguageTool.printIfVerbose() has been changed from protected to private,
      as it was not used anywhere and it's not really useful to extend JLanguageTool
+    -StringTools.isAlphabetic() has been removed as it was a workaround for Java 6
+     which is not supported anymore
 
 
 2.5 (2014-03-31)
